fixed bugs on safari

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -463,7 +463,6 @@ body.dark-theme {
   bottom: 0;
   margin: auto 0px;
   display: grid;
-  row-gap: 1rem;
 }
 
 .home__social-link {
@@ -474,6 +473,7 @@ body.dark-theme {
   display: grid;
   place-items: center;
   transition: background-color 0.3s;
+  margin: 1rem 0rem;
 }
 
 .home__social-link:hover {
